--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 nome=Digital Innovation One
 email=noreply@dio.com.br
 telefones=1145651725,1187651343
+
+remetente.nome=Digital Innovation One - DIO
+remetente.email=noreply@dio.com.br
+remetente.telefones=1145651725,1187651343
